# spring-voyage

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  Directory.Build.props  Directory.Packages.props  NOTICE.md  README.md  SpringVoyage.slnx  cliff.changelog.toml  cliff.toml  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: api-designer.md  architect.md  cli-engineer.md  connector-engineer.md  design-engineer.md  devops-engineer.md  docs-writer.md  dotnet-engineer.md  qa-engineer.md  security-engineer.md  triage-assistant.md  web-engineer.md
.claude/commands/: areas.md  build.md  format.md  lint.md  release-notes.md  test.md  triage.md
.claude/rules/: database-migrations.md  documentation.md  generated-files.md
.codex/: config.toml  hooks.json
.codex/agents/: api-designer.toml  architect.toml  cli-engineer.toml  design-engineer.toml  (+8 more)
.config/: dotnet-tools.json
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
agents/: README.md
agents/magazine-langgraph-orchestrator/: pyproject.toml  requirements.txt
agents/magazine-langgraph-orchestrator/orchestrator/: __init__.py  __main__.py  app.py  commands.py  coordinator.py  graph.py  mcp.py  pipeline.py  reply.py  state.py  tools.py
agents/magazine-langgraph-orchestrator/tests/: test_commands.py  test_coordinator.py  test_graph.py  test_mcp.py  test_pipeline.py  test_reply.py  test_state.py  test_tools.py
agents/spring-voyage-agent/: Dockerfile  README.md  agent.py  pyproject.toml  requirements.txt
agents/spring-voyage-agent-sdk/: README.md  pyproject.toml
agents/spring-voyage-agent-sdk/spring_voyage_agent_sdk/: __init__.py  _otlp_protobuf.py  bootstrap.py  cli.py  context.py  llm.py  rate_limit.py  runtime.py  runtime_context.py  telemetry.py  types.py
agents/spring-voyage-agent-sdk/tests/: __init__.py  conftest.py  test_bootstrap.py  test_context.py  test_llm.py  test_rate_limit.py  test_runtime.py  test_runtime_context.py  test_runtime_persistence.py  test_telemetry.py  test_types.py
agents/spring-voyage-agent/dapr/components/: conversation-ollama.yaml  conversation-openai.yaml  llm-ollama.yaml  llm-openai.yaml
agents/spring-voyage-agent/spring_voyage_agent/: __init__.py  cli.py  context.py  hooks.py  runtime.py
agents/spring-voyage-agent/spring_voyage_agent_sdk/: __init__.py  hooks.py
agents/spring-voyage-agent/tests/: __init__.py  conftest.py  test_a2a_server.py  test_agent.py  test_context.py  test_runtime.py  test_types.py
dapr/: README.md
deployment/: Caddyfile  Caddyfile.multi-host  Dockerfile  Dockerfile.agent  Dockerfile.agent-base  Dockerfile.agent.dapr  Dockerfile.agent.gemini  Dockerfile.agent.oss-design  Dockerfile.agent.oss-software-engineering  Dockerfile.dev  Dockerfile.spring-voyage-agents  README.md  build-agent-images.sh  deploy-remote.sh  deploy.sh  docker-compose.yml  setup.sh  spring-voyage-host.sh  spring.env.example
devops/: README.md
docs/: README.md  SpringVoyage-v2-plan.md  cli-reference.md  design-decisions.md  glossary.md  roadmap.md
eng/: README.md
platform/: runtime-catalog.schema.json  runtime-catalog.yaml
scripts/: audit-no-container-cli.sh  dev.sh  enforce-npm.cjs  extract-changelog-section.sh  regenerate-cli-client.sh  release.sh  validate-connector-web.sh
(+3585 files in other folders)
