[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spring-voyage-agent-sdk"
version = "0.1.0"
description = "Spring Voyage Agent SDK — Python lifecycle-hooks package (initialize / on_message / on_shutdown)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "a2a-sdk[http-server]>=1.0,<2",
    "uvicorn>=0.30,<1",
    # PyYAML for loading agent-definition.yaml (optional at runtime;
    # the SDK falls back to JSON if YAML is absent).
    "PyYAML>=6.0",
    # #2501: OTLP/HTTP+protobuf telemetry emission. opentelemetry-proto
    # provides the generated Python OTLP message types; we wire them up
    # in spring_voyage_agent_sdk.telemetry when
    # OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf. http/json remains the
    # SDK fallback.
    "opentelemetry-proto>=1.20,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
spring-voyage-agent-sdk = "spring_voyage_agent_sdk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["spring_voyage_agent_sdk"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
